- Version 0.0.10

 * Minor changes to save a few bytes when minified and zipped.
 * Accept `Date` as date argument.
 * Combine `timezone.js` with `date.js`.
 * Draft `synopsis.js`.
 * Correctly apply parsed timezone offset. #24.
 * Use specified padding GNU `strftime` extension. #22.
 * Implement linked zone files as copies. #11.
 * Replace binary search with skip-list search. #21.
 * Add heuristics assertions to pre-compiler. #16.
 * Use Ruby 1.9.3 to verify `%::z` formats using `tzdata` files.
 * Convert pre-compiler and library to CoffeeScript.
 * Add tests against `tzdata` to `npm test`. #17.
 * GNU `strftime` format parity. #9. #19.
 * Fixed `%C` which was off by machine zone offset.
 * Implemented parse RFC 3999 without year. #3. #7.
 * Added support for RequireJS AMD.
 * Changes to week of year functions for size savings. #20.
 * `tz` function is now the sole export of Timezone.
 * Accept date as an array of date fields.
 * Split less commonly used GNU `date` formats out into `date.js`.
 * Use `Object.create` to when creating partial `tz` functions.
 * Limit date parsing to RFC 3999.
 * Reject `Date` as date argument.

- Version 0.0.9 - Wed Apr 25 22:07:44 UTC 2012

 * Create `README.md` from `timezone.idl`. `.idl` is a document format for a
   document generator that I'm never going to write.
 * Move grumbling from `README.md` to `MOTIVATIONS.md`.
 * Add `milliseconds` as a synonym for `millis` to date math.
 * Configuration via partial functions.
 * Fix subtraction of years as per #10.
 * Attempt to create JSON as Olson by parsing the Olson files backwards in time.
 * Convert intermediate interval boundaries format to start time from end time.
 * Interpret slash delimited timezone abbreviations.
 * Interpret zone records with a specific savings offset.
 * Correctly convert between standard, wall-clock and POSIX time in preprocessing.
 * Correctly interpret rules that occur at the 24th hour; 24:00.
 * Correctly format `%Z`.