@@ -1,9 +1,10 @@
 #!/usr/bin/env coffee
-require("../proof") 17, ({ tz, moonwalk, utc }) ->
+require("../proof") 20, ({ tz, moonwalk, utc }) ->
   detroit = tz require("../../zones/America/Detroit"), "America/Detroit"
   @equal detroit(tz("1905-01-01 05:32:11"), "%z"), "-0600", "seconds"
   @equal detroit(tz("1905-01-01 05:32:11"), "-1 millisecond", "%z"), "-0532", "seconds truncated"
   @equal detroit(tz("1905-01-01 05:32:11"), "%:z"), "-06:00", "minutes with colon"
+  @equal detroit(tz("1905-01-01 05:32:11"), "%-:z"), "-6:00", "minutes with colon stripped"
   @equal detroit(tz("1905-01-01 05:32:11"), "-1 millisecond", "%:z"), "-05:32", "minutes with colon truncated"
   @equal detroit(tz("1905-01-01 05:32:11"), "%::z"), "-06:00:00", "unneeded seconds with colon"
   @equal detroit(tz("1905-01-01 05:32:11"), "-1 millisecond", "%::z"), "-05:32:11", "seconds with colon"
@@ -30,3 +31,6 @@ require("../proof") 17, ({ tz, moonwalk, utc }) ->
   @equal tz("1916-01-03", "Europe/Amsterdam", "%Z"), "AMT", "dst full abbrev change back"
   @equal tz("1916-07-03", "Europe/Amsterdam", "%Z"), "NST", "dst full abbrev change forward"
   @equal tz("1916-11-03", "Europe/Amsterdam", "%Z"), "AMT", "dst full abbrev change back"
+
+  @equal tz("1980-01-01", "Europe/Amsterdam", "%-:z"), "+1:00", "no padding forward offset"
+  @equal tz("1980-01-01", "Europe/Amsterdam", "%_:z"), " +1:00", "space padding forward offset"
